# msjournal-reader

./: .gitignore  LICENSE.md  PUBLISHING.md  README.md  SKILL.md  pyproject.toml  requirements-ml.txt  requirements.txt
.github/workflows/: tests.yml
msjournal_reader/: __init__.py  corrections.py  ink.py  local_paths.py  postcorrector.py
msjournal_reader/date/: __init__.py  assign.py  parsers.py  repair.py  types.py
msjournal_reader/ocr/: azure.py  base.py  registry.py
scripts/: apply_corrections.py  apply_postcorrector.py  build_index.py  build_publish_bundle.sh  build_year_exports.py  chat_review.py  eval_wer.py  export_page_png.py  extract_missing_from_pdf.py  ink_to_text.py  integrate_corrections.py  jr_cmd.py  learn_corrections_greedy.py  mine_suspects.py  nightly_sync.py  query_index.py  render_review_prompt.py  review_queue.py  rewrite_exports_for_token.py  rewrite_exports_with_corrections.py  train_corrections.py  train_postcorrector_byt5.py  update_exports.py
tests/: test_corrections.py  test_ink_extract.py  test_local_paths.py
user_corrections/: example_journals.json  example_map.json  example_regex.json  local
