[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msjournal-reader"
version = "0.1.0"
description = "Convert Microsoft Journal .ink files into text using OCR"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.md"}
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pillow>=10.0",
    "opencv-python>=4.8",
    "jiwer>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
ml = [
    "transformers>=4.38",
    "torch>=2.0",
    "datasets>=2.17",
    "accelerate>=0.27",
    "tensorboard>=2.16",
    "sentencepiece>=0.2",
]

[tool.setuptools.packages.find]
include = ["msjournal_reader*"]
exclude = ["tests*", "scripts*", "user_corrections*"]
